src/components/App/App.css
.App {
  /* text-align: center; */
  display: grid;
  width: 100%;
/* padding-left: 50px; */
}

.App-header {
  background-color: grey;
  padding: 1em;
  color: white;
  margin-bottom: 1em;
}

.App-title {
  font-size: 5.5em;
  font-family: "Fuggles", cursive;
  padding-left: 50px;
  padding-right: 50px;
}

.gallery-item {
  display: grid;
  align-items: baseline;
  justify-items: center;
  background-color: lightblue;
  padding-top: 30px;
  padding-bottom: 30px;

}

h1 {
  text-align: center;
}

.box {
  /* align-items: stretch;
   */
  /* display: grid; */
justify-content: center;
  grid-template-columns: repeat(5, 1fr);

  grid-template-rows: repeat(2, 1fr);

  gap: 10px;
  width: 100%;
  height: 100%;
/* margin-left: 50px; */

}

.list-div {
  align-items: stretch;
  display: grid;

  grid-template-columns: repeat(5, 1fr);

  grid-template-rows: repeat(2, 1fr);

  gap: 10px;
  width: 100%;

}

.picture {
  display: flex;

  flex-direction: row;

  flex-wrap: wrap;

  align-content: center;

  width: 200px;

  height: 200px;

  border: 1px solid #ccc;

  border-radius: 8px;

  transition: transform 0.3s, box-shadow 0.3s;
}

.picture:hover {
  transform: scale(1.2);

  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

p {
  font-size: 40px;
  font-family: "Fuggles", cursive;
  /* text-align: center; */
  margin-top: 10px;
  margin-bottom: 10px;
}

button {
  background-color: white;
  border-radius: 50%;
}

